# health_analyzer

./: .gitignore  Cargo.toml  README.md  build.rs  gen.ps1  gen.sh
certs/ca/: ca.cnf  gen.sh
certs/client-leaf/: leaf.cnf  leaf.csr
certs/root/: root.cnf
certs/server-leaf/: gen.sh  leaf.cnf  leaf.csr
client/src/: main.rs
proto/: status.proto
server/src/: device_status.rs  main.rs
